# knowledge-graph-rag-assistant

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  dockerfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user-story.md
.github/workflows/: docker-publish.yml  test.yml
backend/: requirements.txt
backend/app/: config.py
backend/app/handlers/: embeddings_handler.py  llm_handler.py  vector_search_handler.py
docs/: README.md  demo-strategy.md
frontend/rag-app/: .dockerignore  README.md  dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/rag-app/src/: App.test.jsx
tests/: conftest.py
tests/integration/: test_nlp_dbpedia.py
tests/unit/: test_dbpedia_query.py  test_vector_search_handler.py
