[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph-rag-assistant"
version = "0.1.0"
description = "WSU senior design capstone RAG prototype for HackerEarth using FastAPI, React, DBpedia, FAISS, and OpenAI"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
